fix: added overflow hidden to body

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   min-width: 320px;
+  overflow-x: hidden;
   min-height: 100vh;
   margin: 0;
   padding: 0;
